# quantum

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  rustfmt.toml
config/: quantum.toml
docs/: cli.md  dependencies.md  deployment.md  dev_seeding.md  embedded_control_plane.md  high_availability.md  interop.md  performance.md  runbook_scaling.md  specification.md
examples/: quickstart.md
examples/client/: Cargo.toml
examples/client/src/: main.rs
src/: lib.rs  main.rs
src/cli/: args.rs  mod.rs
src/cli/commands/: init.rs  inspect.rs  mod.rs  pubsub.rs  snapshot.rs  start.rs  telemetry.rs  toolkit.rs
src/control/: api.rs  capabilities.rs  cli.rs  embedded.rs  migration.rs  mod.rs  placement.rs  routing_cache.rs  telemetry.rs
src/core/: config.rs  mod.rs  runtime.rs  time.rs
src/messaging/: acks.rs  consumer_groups.rs  dedupe.rs  flow.rs  mod.rs  offline.rs  prefetch.rs  retained.rs  topics.rs  transactions.rs
src/net/: mod.rs  security.rs  tls.rs
src/net/listeners/: edge.rs  mod.rs  protocol.rs
src/ops/: audit.rs  dr.rs  mod.rs  observability.rs  telemetry.rs  version.rs
src/prg/: mod.rs  workload.rs  workload_rpc.rs
src/replication/: client.rs  consensus.rs  forwarding.rs  mod.rs  network.rs  replica.rs  routing.rs
src/storage/: compaction.rs  mod.rs  wal.rs
src/toolkit/: chaos.rs  mod.rs  schema.rs  simulator.rs  snapshot.rs  synthetic.rs  telemetry.rs
src/workloads/: mod.rs
src/workloads/kafka/: config.rs  errors.rs  mod.rs  plugin.rs  workload.rs
src/workloads/kafka/protocol/: codec.rs  mod.rs  request.rs  response.rs  types.rs
src/workloads/mqtt/: alias.rs  backpressure.rs  dedupe.rs  expiry.rs  flow_control.rs  lifecycle.rs  metrics.rs  mod.rs  offline.rs  properties.rs  protocol.rs  retained.rs  session.rs  storage.rs  subscriptions.rs
telemetry/: catalog.json
tests/: backlog.rs  cli.rs  common.rs  control_plane.rs  core.rs  embedded_runtime.rs  fixture_seeding.rs  interop.rs  mqtt_props.rs  ops.rs  public_surface.rs  raft_integration.rs  raft_net.rs  session_persistence.rs
tools/: README.md
tools/seed_workload_data/: main.rs
tools/telemetry_guard/: Cargo.toml
tools/telemetry_guard/src/: main.rs
tools/wire_lint/: Cargo.toml
tools/wire_lint/src/: main.rs
wire/: catalog.json  mqtt.json  quic.json
